force-app/main/default/objects/Case_Message__c/Case_Message__c.object-meta.xml
<CustomObject>
    <label>Case Messages</label>
    <nameField>
        <displayFormat>CSM-{00000}</displayFormat>
        <label>Case Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>