force-app/main/default/objects/Case_Message__c/fields/Read_By_Committee__c.field-meta.xml
<CustomField>
    <fullName>Read_By_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to true when the Committee Member views this message through the portal. Meaningful for outbound (Grant Team) messages.</description>
    <label>Read By Committee</label>
    <type>Checkbox</type>
</CustomField>