force-app/main/default/objects/Case_Message__c/fields/Read_By_Committee_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Read_By_Committee_DateTime__c</fullName>
    <description>Timestamp when the Committee Member first viewed this message through the portal.</description>
    <label>Read By Committee DateTime</label>
    <type>DateTime</type>
</CustomField>