force-app/main/default/objects/Case_Message__c/fields/Read_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Read_DateTime__c</fullName>
    <label>Read DateTime</label>
    <type>DateTime</type>
</CustomField>