force-app/main/default/objects/Case_Message__c/fields/Sender_Type__c.field-meta.xml
<CustomField>
    <fullName>Sender_Type__c</fullName>
    <label>Sender Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sender_Type</valueSetName>
    </valueSet>
</CustomField>