force-app/main/default/objects/Case_Message__c/fields/Sender_User__c.field-meta.xml
<CustomField>
    <fullName>Sender_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sender User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Messages</relationshipName>
    <type>Lookup</type>
</CustomField>